--- a/confirmation/src/main/resources/templates/mail/activationEmail.html
+++ b/confirmation/src/main/resources/templates/mail/activationEmail.html
@@ -3,18 +3,16 @@
     <head>
         <title th:text="#{email.activation.title}">Confirmation activation</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link rel="shortcut icon" th:href="@{|${baseUrl}/favicon.ico|}" />
     </head>
     <body>
-        <p th:text="#{email.activation.greeting(${user.login})}">
+        <p th:text="#{email.activation.greeting(${user.email})}">
             Dear
         </p>
         <p th:text="#{email.activation.text1}">
             Your Confirmation account has been created, please click on the URL below to activate it:
         </p>
         <p>
-            <a th:with="url=(@{|${baseUrl}/account/activate?key=${user.activationKey}|})" th:href="${url}"
-            th:text="${url}">Activation link</a>
+            <a th:with="url=(${activationUrl})" th:href="${url}" th:text="${url}">Activation link</a>
         </p>
         <p>
             <span th:text="#{email.activation.text2}">Regards, </span>
